--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "nuxt-icon": "^0.6.10",
     "nuxt-proxy": "^0.0.8"
   },
