--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
+    "cloudscraper": "^4.6.0",
     "nuxt-icon": "^0.6.10",
     "nuxt-proxy": "^0.0.8"
   },
