--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.5.1",
+    "@prisma/adapter-pg": "^5.18.0",
     "@prisma/client": "^5.18.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -45,6 +46,7 @@
     "nodemailer": "^6.9.14",
     "nuxt-icon": "^0.6.10",
     "nuxt-proxy": "^0.0.8",
+    "pg": "^8.12.0",
     "user-agents": "^1.1.268"
   },
   "overrides": {
