--- a/package.json
+++ b/package.json
@@ -40,9 +40,13 @@
     "cheerio": "^1.0.0-rc.12",
     "cloudscraper": "^4.6.0",
     "fast-xml-parser": "^4.4.0",
+    "github-slugger": "^2.0.0",
     "https-proxy-agent": "^7.0.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^14.1.2",
+    "mavon-editor": "^3.0.1",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.14",
     "nuxt-icon": "^0.6.10",
     "nuxt-proxy": "^0.0.8",
