--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^8.0.0-rc.7",
+    "@nuxtjs/sitemap": "^6.0.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@types/node": "^18.16.19",
     "nuxt": "^3.11.2",
