--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@fortawesome/fontawesome-free": "^6.7.0",
+    "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.5.1",
@@ -58,6 +59,7 @@
     "nuxt-proxy": "^0.0.8",
     "papaparse": "^5.4.1",
     "pg": "^8.12.0",
+    "sharp": "^0.33.5",
     "user-agents": "^1.1.268",
     "xlsx": "^0.18.5"
   },
