--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@types/node": "^18.16.19",
     "nuxt": "^3.13.2",
-    "prisma": "^5.18.0",
+    "prisma": "6.0.0",
     "sass": "^1.77.1",
     "typescript": "^5.1.6",
     "video.js": "^8.17.4",
@@ -36,8 +36,8 @@
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.5.1",
-    "@prisma/adapter-pg": "^5.18.0",
-    "@prisma/client": "^5.18.0",
+    "@prisma/adapter-pg": "6.0.0",
+    "@prisma/client": "6.0.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
