--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,21 +20,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
       - prisma-migrate
-
-  db:
-    image: postgres:15-alpine
-    container_name: aipan-netdisk-search-db
-    restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-netdisk}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
 
   prisma-migrate:
     image: node:20.18.0-alpine
@@ -55,8 +41,7 @@ services:
       - ./.env:/app/.env
     environment:
       DATABASE_URL: ${DATABASE_URL}
-    depends_on:
-      - db
+    restart: "no"
 
 volumes:
   postgres_data:
