--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         JWT_SECRET: ${JWT_SECRET}
         DATABASE_URL: ${DATABASE_URL}
         DATABASE_SCHEMA: ${DATABASE_SCHEMA}
-        SHADOW_DATABASE_URL: ${SHADOW_DATABASE_URL}
+        # SHADOW_DATABASE_URL: ${SHADOW_DATABASE_URL}
     ports:
       - "3000:3000" # 映射容器的 3000 端口到宿主机的 3000 端口
     env_file:
