--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,17 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 添加 Node.js 缓存
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.18.0"
+
       - name: Cache node modules
         uses: actions/cache@v3
         with:
@@ -26,6 +32,8 @@ jobs:
 
       - name: Generate Prisma Client
         run: npx prisma generate
+        env:
+          DATABASE_URL: "postgresql://dummy:dummy@dummy:5432/dummy?schema=public"
 
       - name: Build application
         run: npm run build
@@ -36,7 +44,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 添加 Docker 缓存
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
@@ -55,7 +62,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/amd64/v2
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             unilei/aipan-netdisk-search:latest
@@ -69,7 +76,6 @@ jobs:
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ github.event.repository.updated_at }}
 
-      # 更新 Docker 缓存
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
